Updated to include all *TA* files within EXTRA_DIST. This is necessary because we will be distributing premade versions of these files. Since we have also told the autotools that we explicitly make these files if they are not present, we need to tell the autotools to also distribute them initially. This update also creates a .PHONY target for all the files in /src/ta/ios-g++-3.1/. This is because these files are never made. In order to pass 'make distcheck' there must be a rule to bring them up to date, but since that never happens we'll use a phony one.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,23 +1,40 @@
-#SUBDIRS = src/maketa src/taiqtso src/tacss src/tamisc src/pdp src/leabra src/bp (the rest)
+#SUBDIRS = src/maketa src/taiqtso src/tacss src/tamisc src/pdp src/leabra src/bp
 SUBDIRS = src/maketa src/taiqtso src/ta src/css src/tamisc
 
-EXTRA_DIST =\
-	src/taglobal.h \
-	src/platform.h \
-	src/qtdefs.h \
-	src/ta/ta_maketa_defs.h \
-	src/ta/ta_TA.cpp \
-	src/ta/ta_TA_type.h \
-	src/ta/ta_TA_inst.h \
+EMPTY_AUTOMAKE_TARGETS =\
 	/src/ta/ios-g++-3.1/fstream.h \
 	/src/ta/ios-g++-3.1/iostream.h \
 	/src/ta/ios-g++-3.1/sstream.h \
 	/src/ta/ios-g++-3.1/streambuf.h \
 	/src/ta/ios-g++-3.1/strstream.h
 
-# Hopefully temporary hack
-/src/ta/ios-g++-3.1/fstream.h:
-/src/ta/ios-g++-3.1/iostream.h:
-/src/ta/ios-g++-3.1/sstream.h:
-/src/ta/ios-g++-3.1/streambuf.h:
-/src/ta/ios-g++-3.1/strstream.h:
+EXTRA_DIST =\
+	src/taglobal.h \
+	src/platform.h \
+	src/qtdefs.h \
+	src/ta/ta_maketa_defs.h \
+	src/maketa/maketa_TA_type.h \
+	src/maketa/maketa_TA_inst.h \
+	src/maketa/maketa_TA.cpp \
+	src/taiqtso/taiqtso_TA_type.h \
+	src/taiqtso/taiqtso_TA_inst.h \
+	src/taiqtso/taiqtso_TA.cpp \
+	src/ta/ta_TA_type.h \
+	src/ta/ta_TA_inst.h \
+	src/ta/ta_TA.cpp \
+	src/tamisc/tamisc_TA_type.h \
+	src/tamisc/tamisc_TA_inst.h \
+	src/tamisc/tamisc_TA.cpp \
+	src/pdp/pdp_TA_type.h \
+	src/pdp/pdp_TA_inst.h \
+	src/pdp/pdp_TA.cpp \
+	src/leabra/leabra_TA_type.h \
+	src/leabra/leabra_TA_inst.h \
+	src/leabra/leabra_TA.cpp \
+	src/bp/bp_TA_type.h \
+	src/bp/bp_TA_inst.h \
+	src/bp/bp_TA.cpp \
+	$(EMPTY_AUTOMAKE_TARGETS)
+
+.PHONY: $(EMPTY_AUTOMAKE_TARGETS)
+$(EMPTY_AUTOMAKE_TARGETS):
