change paradigm from .moc.cpp to moc_

--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -7,11 +7,11 @@ if TA_GUI
 
 SRCS_GUI =\
 	css_qttype.cpp \
-	css_qttype.moc.cpp \
+	moc_css_qttype.cpp \
 	css_qt.cpp \
-	css_qttype.moc.cpp \
+	moc_css_qttype.cpp \
 	css_qtdata.cpp \
-	css_qtdata.moc.cpp \
+	moc_css_qtdata.cpp \
 	css_qtdialog.cpp
 
 HEADS_GUI =\
