I had to revert moc back to the old rules as the GNU Make pattern rules broke the automatic dependency tracking and automake would not finish without erroring out.

--- a/Conditionals.am
+++ b/Conditionals.am
@@ -126,10 +126,7 @@ PREPROCESSOR_FLAGS +=\
 MAKETA_FLAGS +=\
 	-hx \
 	-css \
-	-cpp=$(cppC) \
-	$(PREPROCESSOR_FLAGS) \
-	$(GUI_PREPROCESSOR_FLAGS)
-	
+	-cpp=$(cppC)	
 
 LINKER_FLAGS +=\
 	$(LIBS) \
@@ -144,4 +141,4 @@ COMPILER_FLAGS +=\
 
 clean-local:
 	-rm *TA*
-	-rm *.moc*
+	-rm *moc*
