--- a/Makefile.am
+++ b/Makefile.am
@@ -1,40 +1,20 @@
 #SUBDIRS = src/maketa src/taiqtso src/tacss src/tamisc src/pdp src/leabra src/bp
 SUBDIRS = src/maketa src/taiqtso src/ta src/css src/tamisc
 
-EMPTY_AUTOMAKE_TARGETS =\
-	/src/ta/ios-g++-3.1/fstream.h \
-	/src/ta/ios-g++-3.1/iostream.h \
-	/src/ta/ios-g++-3.1/sstream.h \
-	/src/ta/ios-g++-3.1/streambuf.h \
-	/src/ta/ios-g++-3.1/strstream.h
-
 EXTRA_DIST =\
-	src/taglobal.h \
-	src/platform.h \
-	src/qtdefs.h \
-	src/ta/ta_maketa_defs.h \
-	src/maketa/maketa_TA_type.h \
-	src/maketa/maketa_TA_inst.h \
-	src/maketa/maketa_TA.cpp \
-	src/taiqtso/taiqtso_TA_type.h \
-	src/taiqtso/taiqtso_TA_inst.h \
-	src/taiqtso/taiqtso_TA.cpp \
-	src/ta/ta_TA_type.h \
-	src/ta/ta_TA_inst.h \
-	src/ta/ta_TA.cpp \
-	src/tamisc/tamisc_TA_type.h \
-	src/tamisc/tamisc_TA_inst.h \
-	src/tamisc/tamisc_TA.cpp \
-	src/pdp/pdp_TA_type.h \
-	src/pdp/pdp_TA_inst.h \
-	src/pdp/pdp_TA.cpp \
-	src/leabra/leabra_TA_type.h \
-	src/leabra/leabra_TA_inst.h \
-	src/leabra/leabra_TA.cpp \
-	src/bp/bp_TA_type.h \
-	src/bp/bp_TA_inst.h \
-	src/bp/bp_TA.cpp \
-	$(EMPTY_AUTOMAKE_TARGETS)
+	src/ta/ta_maketa_defs.h
 
-.PHONY: $(EMPTY_AUTOMAKE_TARGETS)
-$(EMPTY_AUTOMAKE_TARGETS):
+dist-hook:
+	mkdir $(distdir)/src/ta/ios-g++-3.1
+	cp -p $(srcdir)/src/ta/ios-g++-3.1/fstream.h \
+		$(srcdir)/src/ta/ios-g++-3.1/iostream.h \
+		$(srcdir)/src/ta/ios-g++-3.1/sstream.h \
+		$(srcdir)/src/ta/ios-g++-3.1/streambuf.h \
+		$(srcdir)/src/ta/ios-g++-3.1/strstream.h \
+		$(distdir)/src/ta/ios-g++-3.1
+	cp -p $(srcdir)/src/ta/taglobal.h \
+		$(srcdir)/src/ta/platform.h \
+		$(srcdir)/src/ta/qtdefs.h\
+		$(distdir)/src/ta
+	cp -p $(srcdir)/src/tamisc/tamisc_maketa_defs.h \
+		$(distdir)/src/tamisc/tamisc_maketa_defs.h
