--- a/src/taiqtso/Makefile.am
+++ b/src/taiqtso/Makefile.am
@@ -3,6 +3,9 @@ PROJNAME = taiqtso
 #  Process this file with automake to produce Makefile.in
 #*********************************************************
 
+srcdir = @srcdir@
+VPATH = @srcdir@
+
 HEADS =\
 	taiqtso_def.h \
 	iflowlayout.h \
