--- a/Makefile.am
+++ b/Makefile.am
@@ -34,3 +34,6 @@ dist-hook:
 		$(distdir)/src/tamisc/tamisc_maketa_defs.h
 	cp -p $(srcdir)/src/ta/ta_maketa_defs.h \
 		$(distdir)/src/ta/ta_maketa_defs.h
+
+linecount:
+	@ wc --lines `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` | grep total
