--- a/src/css/Makefile.am
+++ b/src/css/Makefile.am
@@ -64,15 +64,15 @@ libcss_la_CPPFLAGS =\
 	-I$(abs_top_builddir)/src/taiqtso
 libcss_la_CFLAGS = $(COMPILER_FLAGS) $(GUI_COMPILER_FLAGS)
 
-bin_PROGRAMS = css
-css_SOURCES = main.cpp
+bin_PROGRAMS = css++
+css___SOURCES = main.cpp
 
-css_LDADD = libcss.la @abs_top_builddir@/src/ta/libta.la
+css___LDADD = libcss.la @abs_top_builddir@/src/ta/libta.la
 
 if TA_GUI
-css_LDADD += @abs_top_builddir@/src/taiqtso/libtaiqtso.la
+css___LDADD += @abs_top_builddir@/src/taiqtso/libtaiqtso.la
 endif
 
-css_LDFLAGS = $(libcss_la_LDFLAGS)
-css_CPPFLAGS = $(libcss_la_CPPFLAGS)
-css_CFLAGS = $(libcss_la_CFLAGS)
+css___LDFLAGS = $(libcss_la_LDFLAGS)
+css___CPPFLAGS = $(libcss_la_CPPFLAGS)
+css___CFLAGS = $(libcss_la_CFLAGS)
