flag cleanup, suffixes etc..

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,20 +3,12 @@
 # If you remove/add one of SUBDIRS, be sure to
 # do the same at the bottom of configure.ac
 
-SUBDIRS =\
-	src/maketa \
-	src/taiqtso \
-	src/ta \
-	src/css \
-	src/tamisc \
-	src/pdp \
-	src/leabra \
-	src/bp
+DIST_SUBDIRS =src/maketa src/taiqtso src/ta src/css src/tamisc src/pdp src/leabra src/bp
+SUBDIRS = src/maketa @WANT_TAIQTSO@ src/ta src/css src/tamisc src/pdp src/leabra src/bp
 
 EXTRA_DIST = src/ta/ios-g++-3.1
 
-# These actions occur immediately before a 
-# distribution tarball is created.
+# These actions occur immediately before a distribution tarball is created.
 
 dist-hook:
 	rm -fr $(distdir)/src/ta/ios-g++-3.1/.svn
@@ -28,6 +20,9 @@ dist-hook:
 		$(distdir)/src/tamisc/tamisc_maketa_defs.h
 	cp -p $(srcdir)/src/ta/ta_maketa_defs.h \
 		$(distdir)/src/ta/ta_maketa_defs.h
+
+
+# Counts the number of lines in *.h and *.cpp files
 
 linecount:
 	@ wc --lines `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` | grep total
